tests/invalid/field_syntax_error.err_exp
field_syntax_error.m:020: In clause for function `baz1'/1:
field_syntax_error.m:020:   warning: variable [38;5;87m`Bar'[39;49m [38;5;203moccurs only once[39;49m in this
field_syntax_error.m:020:   scope.
field_syntax_error.m:020: In clause for function `baz1'/1:
field_syntax_error.m:020:   in function result term of clause head:
field_syntax_error.m:020:   error: [38;5;203minvalid use of the field selection operator[39;49m
field_syntax_error.m:020:   [38;5;203m(`^').[39;49m
field_syntax_error.m:023: In clause for function `baz2'/1:
field_syntax_error.m:023:   in function result term of clause head:
field_syntax_error.m:023:   error: [38;5;203minvalid use of the field selection operator[39;49m
field_syntax_error.m:023:   [38;5;203m(`^').[39;49m
field_syntax_error.m:026: In clause for function `baz3'/1:
field_syntax_error.m:026:   warning: variable [38;5;87m`Bar'[39;49m [38;5;203moccurs only once[39;49m in this
field_syntax_error.m:026:   scope.
field_syntax_error.m:026: In clause for function `baz3'/1:
field_syntax_error.m:026:   in function result term of clause head:
field_syntax_error.m:026:   error: [38;5;203minvalid use of the field update operator[39;49m
field_syntax_error.m:026:   [38;5;203m(`:=').[39;49m
field_syntax_error.m:026: In clause for function `baz3'/1:
field_syntax_error.m:026:   in function result term of clause head:
field_syntax_error.m:026:   in argument 1 of functor `:=/2':
field_syntax_error.m:026:   error: [38;5;203minvalid use of the field selection operator[39;49m
field_syntax_error.m:026:   [38;5;203m(`^').[39;49m
field_syntax_error.m:029: In clause for function `baz4'/1:
field_syntax_error.m:029:   in function result term of clause head:
field_syntax_error.m:029:   error: [38;5;203minvalid use of the field update operator[39;49m
field_syntax_error.m:029:   [38;5;203m(`:=').[39;49m
field_syntax_error.m:029: In clause for function `baz4'/1:
field_syntax_error.m:029:   in function result term of clause head:
field_syntax_error.m:029:   in argument 1 of functor `:=/2':
field_syntax_error.m:029:   error: [38;5;203minvalid use of the field selection operator[39;49m
field_syntax_error.m:029:   [38;5;203m(`^').[39;49m
field_syntax_error.m:034: In clause for function `baz5'/1:
field_syntax_error.m:034:   warning: variable [38;5;87m`Foo'[39;49m [38;5;203moccurs only once[39;49m in this
field_syntax_error.m:034:   scope.
field_syntax_error.m:034: In clause for function `baz5'/1:
field_syntax_error.m:034:   in argument 1 of functor `f2/1':
field_syntax_error.m:034:   error: [38;5;203minvalid use of the `!' state variable[39;49m
field_syntax_error.m:034:   [38;5;203moperator.[39;49m
field_syntax_error.m:034: Warning: if the expression [38;5;87m`!Foo ^ f2'[39;49m is intended to
field_syntax_error.m:034:   be part of a field update, then it should be
field_syntax_error.m:034:   followed by [38;5;40m`:=',[39;49m not [38;5;203m`='.[39;49m
For more information, recompile with `-E'.
